<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Team BlueRidge Paste</string>
    <string name="title_section1">Create Paste</string>
    <string name="title_section2">View Pastes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="version_name">3.0</string>

    <!--Actions-->
    <string name="paste_upload">Upload Paste</string>

    <!--Preferences-->
    <string name="pref_general">General</string>
    <string name="pref_name">Name</string>
    <string name="pref_name_summary">Your name to be shown on pastes</string>
    <string name="pref_about">About</string>
    <string name="pref_version">Version</string>


    <!--Menu-->
    <string name="action_settings">Settings</string>


</resources>
