<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_general" >
        <EditTextPreference
            android:key="pref_name"
            android:title="@string/pref_name"
            android:summary="@string/pref_name_summary"
            android:defaultValue="Mobile User"
            android:inputType="textPersonName"/>
     </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_about" >
        <PreferenceScreen android:title="Powered by Stikked">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/claudehohl/Stikked"
                />
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/pref_version" android:summary="@string/version_name">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.teamblueridge.org"
                />
        </PreferenceScreen>
    </PreferenceCategory>

</PreferenceScreen>